# ASAP

./: README.md
asap/coordinator/: README.md
asap/coordinator/include/coordinator/: coordinator.tpp  primary_nodelet.h  primary_tests.hpp
asap/coordinator/msg/: StatusPrimary.msg  StatusSecondary.msg  TestNumber.msg
asap/coordinator/src/: primary_nodelet.cc  secondary_nodelet.cc
asap/data/output/rosbags/: README.md
asap/execute_asap/: README.md
asap/execute_asap/config/: primary_coord_params.yaml  secondary_coord_params.yaml
asap/execute_asap/launch/: README.md
asap/execute_asap/scripts/: execute_asap.py  pub_gds_topics.py  pub_status.py
asap/my_node/: CMakeLists.txt  package.xml
asap/my_node/src/: my_node.py
